--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 -i https://pypi.org/simple
 bokeh==3.6.2; python_version >= '3.10'
+certifi==2024.12.14; python_version >= '3.6'
+cftime==1.6.4.post1; python_version >= '3.8'
 contourpy==1.3.1; python_version >= '3.10'
 cycler==0.12.1; python_version >= '3.8'
 fonttools==4.55.3; python_version >= '3.8'
@@ -8,6 +10,7 @@ jinja2==3.1.4; python_version >= '3.7'
 kiwisolver==1.4.7; python_version >= '3.8'
 markupsafe==3.0.2; python_version >= '3.9'
 matplotlib==3.10.0; python_version >= '3.10'
+netcdf4==1.7.2; python_version >= '3.8'
 numpy==2.2.0; python_version >= '3.10'
 packaging==24.2; python_version >= '3.8'
 pandas==2.2.3; python_version >= '3.9'
@@ -15,10 +18,10 @@ pillow==11.0.0; python_version >= '3.9'
 pluggy==1.5.0; python_version >= '3.8'
 pyparsing==3.2.0; python_version >= '3.9'
 pytest==8.3.4; python_version >= '3.8'
-python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
+python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pytz==2024.2
 pyyaml==6.0.2; python_version >= '3.8'
-six==1.17.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
+six==1.17.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 tornado==6.4.2; python_version >= '3.8'
 tzdata==2024.2; python_version >= '2'
 xarray==2024.11.0; python_version >= '3.10'
