--- a/requirements.txt
+++ b/requirements.txt
@@ -18,10 +18,11 @@ pillow==11.0.0; python_version >= '3.9'
 pluggy==1.5.0; python_version >= '3.8'
 pyparsing==3.2.0; python_version >= '3.9'
 pytest==8.3.4; python_version >= '3.8'
-python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
 pytz==2024.2
 pyyaml==6.0.2; python_version >= '3.8'
-six==1.17.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+scipy==1.15.1; python_version >= '3.10'
+six==1.17.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
 tornado==6.4.2; python_version >= '3.8'
 tzdata==2024.2; python_version >= '2'
 xarray==2024.11.0; python_version >= '3.10'
