not using scipy, remove it from dependencies
also trying to force the netcdf4 engine backend for xarray, so trying to avoid
any chance of using the scipy backend

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,7 @@ authors = [
 dependencies = [
     "xarray",
     "numpy",
-    "scipy",
-    "netCDF4",
+    "netcdf4",
     "matplotlib",
     "pandas",
     "bokeh",
